# chaquopy-stubgen

./: .gitignore  README.md  maven.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
changes/: 1.misc.md  10.bugfix.md  2.bugfix.md  3.feature.md  4.misc.md  5.bugfix.md  6.feature.md  7.feature.md  8.bugfix.1.md  8.feature.1.md  8.feature.2.md  8.removal.md  9.added.md  README.md  template.md.jinja
src/chaquopy_stubgen/: __init__.py  __main__.py  _class_stub.py  _log.py  _pysafe.py  _sig_parser.py  _stubgenj.py  _version.py  chaquopy_bindings.py  cli.py  conftest.py  stubgen.py  whitelists.py
src/chaquopy_stubgen/_artifacts/: __init__.py  android.py  maven.py
src/chaquopy_stubgen/_stubgen/: chaquopy_bindings.py  class_stub.py  main.py  pysafe.py  sig_parser.py  types.py  whitelists.py
tests/: conftest.py  mypy_helper.py  test_array_list.py  test_callbacks.py  test_chaquopy.py  test_enummap.py  test_exception.py  test_forward_declaration.py  test_hashmap.py  test_jarray.py  test_kotlin.py  test_mangled_python_keywords.py  test_mro_sort.py  test_positional_only.py  test_primitives.py  test_static_proxy.py  test_stubtest.py  test_type_conversions.py  test_type_vars.py  test_varargs.py
tests/stubtest/: README.md
tests/stubtest/test-data/unit/: arraylist.test  callbacks.test  enummap.test  exception.test  forward_declaration.test  hashmap.test  jarray.test  mangled_python_keywords.test  type_conversions.test  varargs.test
