[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "chaquopy-stubgen"
description = "PEP484 python stub generator for Java classes accessed through Chaquopy on Android"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = [
    "stubgen",
    "JPype",
    "Python",
    "Java",
    "Chaquopy",
    "Beeware",
    "briefcase",
    "Android",
    "PEP484"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "JPype1>=1.6.0,<2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest",
    "mypy==1.15.0",
]

[tool.setuptools_scm]
version_file = "src/chaquopy_stubgen/_version.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules -p no:faulthandler"
