[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "chaquopy-stubgen"
description = "PEP484 python stub generator for Java classes accessed through Chaquopy on Android"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = [
    "stubgen",
    "JPype",
    "Python",
    "Java",
    "Chaquopy",
    "Beeware",
    "briefcase",
    "Android",
    "PEP484"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "JPype1>=1.6.0,<2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest",
    "mypy==1.19.1",
    "towncrier==25.8.0",
]

[tool.setuptools_scm]
version_file = "src/chaquopy_stubgen/_version.py"

[tool.setuptools.package-data]
chaquopy_stubgen = ["_jvm_libs/*.jar"]

[tool.pytest.ini_options]
addopts = "--doctest-modules -p no:faulthandler"

[tool.towncrier]
package = "chaquopy_stubgen"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changes"
template = "changes/template.md.jinja"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/timrid/chaquopy-stubgen/issues/{issue})"
start_string = "<!-- towncrier release notes start -->"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false
